Improve layout and text for Contrology class section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,37 @@
 <body>
     <!-- header section  -->
      <div>
-        <header></header>
+        <header>
+            <div>
+                <div>
+                    <h1>Home <span>of Peace</span></h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a>Home</a>
+                            <a>Services</a>
+                            <a>Pricing</a>
+                            <a>About</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
      </div>
      <!-- hero section  -->
-      <section></section>
+      <section> 
+        <div>
+        <h1>Escape<br><span>to a new world of peace</span></h1>
+        <p>Join our welcoming Contrology class, where everyone from beginners to experts can explore the
+            benefits of Pilates. Enhance your strength, flexibility, and well-being with our supportive
+            instructors. Experience the transformative power of mindful movement today!</p>
+        <div>
+            <p>Our yoga studio values the wisdom of mindfulness, offering diverse activities and courses that
+                help one discover themselves fully, learn to love themselves, and understand our values as
+                humans.</p>
+        </div>
+    </div></section>
       <!-- our offers -->
       <section></section>
       <!-- pricing  -->
