add a pricing section to the index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contrology</title>
 </head>
+
 <body>
     <!-- header section  -->
-     <div>
+    <div>
         <header>
             <div>
                 <div>
@@ -25,29 +27,101 @@
                 </nav>
             </div>
         </header>
-     </div>
-     <!-- hero section  -->
-      <section> 
+    </div>
+    <!-- hero section  -->
+    <section>
         <div>
-        <h1>Escape<br><span>to a new world of peace</span></h1>
-        <p>Join our welcoming Contrology class, where everyone from beginners to experts can explore the
-            benefits of Pilates. Enhance your strength, flexibility, and well-being with our supportive
-            instructors. Experience the transformative power of mindful movement today!</p>
-        <div>
-            <p>Our yoga studio values the wisdom of mindfulness, offering diverse activities and courses that
-                help one discover themselves fully, learn to love themselves, and understand our values as
-                humans.</p>
-        </div>
-    </div></section>
-      <!-- our offers -->
-      <section></section>
-      <!-- pricing  -->
-      <section></section>
-      <!-- testimonial section  -->
-      <section></section>
-      <!-- footer  -->
-       <footer></footer>
+            <h1>Escape<br><span>to a new world of peace</span></h1>
+            <p>Join our welcoming Contrology class, where everyone from beginners to experts can explore the
+                benefits of Pilates. Enhance your strength, flexibility, and well-being with our supportive
+                instructors. Experience the transformative power of mindful movement today!</p>
+            <div>
+                <p>Our yoga studio values the wisdom of mindfulness, offering diverse activities and courses that
+                    help one discover themselves fully, learn to love themselves, and understand our values as
+                    humans.</p>
+            </div>
+    </section>
+    <!-- our offers -->
+    <section>
+        <div></div>
+        <h2>What We Offer</h2>
 
-    
+        <div>
+            <div>
+                <h3>Personalized Instruction</h3>
+                <p>Receive tailored guidance to match your fitness level and goals, ensuring effective progress in
+                    strength, flexibility, and overall body awareness.</p>
+            </div>
+            <div>
+                <imgsrc="" alt="Personalized Instruction Image">
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <img src="" alt="Group Sessions Image">
+            </div>
+            <div>
+                <h3>Group Sessions</h3>
+                <p>Engage in dynamic group classes that promote community, support, and motivation while practicing
+                    Contrology techniques to improve core stability and balance.</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <h3>Specialized Workshops</h3>
+                <p>Participate in focused workshops addressing specific areas such as posture correction, injury
+                    prevention, or advanced Contrology techniques for enhanced skill mastery.</p>
+            </div>
+            <div>
+                <img src="" alt="Specialized Workshops Image">
+            </div>
+        </div>
+        </div>
+    </section>
+    <!-- pricing  -->
+    <section>
+        <div class="container">
+        <div>
+            <h4>Beginner Package</h4>
+            <p>$24.5 <span>Per Month</span></p>
+            <p>Affordable pricing for beginners</p>
+            <p>Four classes per month.</p>
+            <p>Build strength and flexibility.</p>
+        </div>
+        <div class="pricing-item">
+            <h4>Intermediate Package</h4>
+            <p>$50.5 <span>Per Month</span></p>
+            <p>Great value for intermediates</p>
+            <p>Eight classes per month.</p>
+            <p>Enhance skills and balance.</p>
+        </div>
+        <div>
+            <h4>Advanced Package</h4>
+            <p>$75.0 <span>Per Month</span></p>
+            <p>Advanced package for enthusiasts.</p>
+            <p>Unlimited monthly class access.</p>
+            <p>Master Contrology techniques.</p>
+        </div>
+        </div>
+    </section>
+    <section>
+        <section>
+            <div>
+                <h2> Your Journey</h2>
+                <p>Choose the perfect package. Transform your body today. Join our Contrology community. Experience
+                    Pilates benefits now!</p>
+                <h2>Ready to Book Your Class with Us?</h2>
+            </div>
+        </section>
+    </section>
+    <!-- testimonial section  -->
+    <section></section>
+    <!-- footer  -->
+    <footer></footer>
+
+
 </body>
+
 </html>
