add a testimony section to the index.html

--- a/index.html
+++ b/index.html
@@ -117,9 +117,22 @@
         </section>
     </section>
     <!-- testimonial section  -->
-    <section></section>
+    <section>
+        <div>
+            <h2>What Our Clients Say</h2>
+            <div>
+                <p>"I love the sense of community, family outside blood" - <strong>Aida Luna</strong></p>
+                <p>"Yoga has completely transformed my life, getting more than ever" - <strong>Ella Milton</strong></p>
+                <p>"Attending classes regularly has become a great part of my life" - <strong>Mia Oskert</strong></p>
+            </div>
+        </div>
+    </section>
     <!-- footer  -->
-    <footer></footer>
+    <footer>
+        <div>
+            <p>&copy; 2024 Contrology. All rights reserved.</p>
+        </div>
+    </footer>
 
 
 </body>
