add classes to the header section for editing in the css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contrology</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- header section  -->
-    <div>
+    <div class="main-image">
         <header>
-            <div>
-                <div>
+            <div class="containers">
+                <div class="logo">
                     <h1>Home <span>of Peace</span></h1>
                 </div>
                 <nav>
