add images to represent the different groups offered

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <nav>
                     <ul>
                         <li>
-                            <a>Home</a>
-                            <a>Services</a>
-                            <a>Pricing</a>
-                            <a>About</a>
+                            <a href="#home" class="hover">Home</a>
+                            <a href="#services" class="hover">Services</a>
+                            <a href="#pricing" class="hover">Pricing</a>
+                            <a href="#about" class="hover">About</a>
                         </li>
                     </ul>
                 </nav>
@@ -30,37 +30,37 @@
         </header>
     </div>
     <!-- hero section  -->
-    <section>
-        <div>
+    <section class="hero" id="home">
+        <div class="home-content">
             <h1>Escape<br><span>to a new world of peace</span></h1>
             <p>Join our welcoming Contrology class, where everyone from beginners to experts can explore the
                 benefits of Pilates. Enhance your strength, flexibility, and well-being with our supportive
                 instructors. Experience the transformative power of mindful movement today!</p>
-            <div>
+            <div class="about">
                 <p>Our yoga studio values the wisdom of mindfulness, offering diverse activities and courses that
                     help one discover themselves fully, learn to love themselves, and understand our values as
                     humans.</p>
             </div>
     </section>
     <!-- our offers -->
-    <section>
-        <div></div>
+    <section id="services" class="services-section">
+        <div class="container">
         <h2>What We Offer</h2>
 
-        <div>
-            <div>
+        <div class="service-item">
+            <div class="service-text">
                 <h3>Personalized Instruction</h3>
                 <p>Receive tailored guidance to match your fitness level and goals, ensuring effective progress in
                     strength, flexibility, and overall body awareness.</p>
             </div>
-            <div>
-                <imgsrc="" alt="Personalized Instruction Image">
+            <div class="service-image">
+                <img src="assets/images/personilized.jpeg" alt="Personalized Instruction Image">
             </div>
         </div>
 
-        <div>
-            <div>
-                <img src="" alt="Group Sessions Image">
+        <div class="service-item">
+            <div class="service-image">
+                <img src="assets/images/group session.jpeg" alt="Group Sessions Image">
             </div>
             <div>
                 <h3>Group Sessions</h3>
@@ -69,14 +69,14 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="service-item">
+            <div class="service-text">
                 <h3>Specialized Workshops</h3>
                 <p>Participate in focused workshops addressing specific areas such as posture correction, injury
                     prevention, or advanced Contrology techniques for enhanced skill mastery.</p>
             </div>
-            <div>
-                <img src="" alt="Specialized Workshops Image">
+            <div class="service-image">
+                <img src="assets/images/special.jpeg" alt="Specialized Workshops Image">
             </div>
         </div>
         </div>
