Update navigation bar styles and hover effects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- header section  -->
     <div class="main-image">
+        <img src="assets/images/main.jpg" alt= "main image" >
         <header>
             <div class="containers">
                 <div class="logo">
@@ -45,66 +46,66 @@
     <!-- our offers -->
     <section id="services" class="services-section">
         <div class="container">
-        <h2>What We Offer</h2>
+            <h2>What We Offer</h2>
 
-        <div class="service-item">
-            <div class="service-text">
-                <h3>Personalized Instruction</h3>
-                <p>Receive tailored guidance to match your fitness level and goals, ensuring effective progress in
-                    strength, flexibility, and overall body awareness.</p>
+            <div class="service-item">
+                <div class="service-text">
+                    <h3>Personalized Instruction</h3>
+                    <p>Receive tailored guidance to match your fitness level and goals, ensuring effective progress in
+                        strength, flexibility, and overall body awareness.</p>
+                </div>
+                <div class="service-image">
+                    <img src="assets/images/personilized.jpeg" alt="Personalized Instruction Image">
+                </div>
             </div>
-            <div class="service-image">
-                <img src="assets/images/personilized.jpeg" alt="Personalized Instruction Image">
-            </div>
-        </div>
 
-        <div class="service-item">
-            <div class="service-image">
-                <img src="assets/images/group session.jpeg" alt="Group Sessions Image">
+            <div class="service-item">
+                <div class="service-image">
+                    <img src="assets/images/group session.jpeg" alt="Group Sessions Image">
+                </div>
+                <div>
+                    <h3>Group Sessions</h3>
+                    <p>Engage in dynamic group classes that promote community, support, and motivation while practicing
+                        Contrology techniques to improve core stability and balance.</p>
+                </div>
             </div>
-            <div>
-                <h3>Group Sessions</h3>
-                <p>Engage in dynamic group classes that promote community, support, and motivation while practicing
-                    Contrology techniques to improve core stability and balance.</p>
-            </div>
-        </div>
 
-        <div class="service-item">
-            <div class="service-text">
-                <h3>Specialized Workshops</h3>
-                <p>Participate in focused workshops addressing specific areas such as posture correction, injury
-                    prevention, or advanced Contrology techniques for enhanced skill mastery.</p>
+            <div class="service-item">
+                <div class="service-text">
+                    <h3>Specialized Workshops</h3>
+                    <p>Participate in focused workshops addressing specific areas such as posture correction, injury
+                        prevention, or advanced Contrology techniques for enhanced skill mastery.</p>
+                </div>
+                <div class="service-image">
+                    <img src="assets/images/special.jpeg" alt="Specialized Workshops Image">
+                </div>
             </div>
-            <div class="service-image">
-                <img src="assets/images/special.jpeg" alt="Specialized Workshops Image">
-            </div>
-        </div>
         </div>
     </section>
     <!-- pricing  -->
     <section>
         <div class="container">
-        <div>
-            <h4>Beginner Package</h4>
-            <p>$24.5 <span>Per Month</span></p>
-            <p>Affordable pricing for beginners</p>
-            <p>Four classes per month.</p>
-            <p>Build strength and flexibility.</p>
-        </div>
-        <div class="pricing-item">
-            <h4>Intermediate Package</h4>
-            <p>$50.5 <span>Per Month</span></p>
-            <p>Great value for intermediates</p>
-            <p>Eight classes per month.</p>
-            <p>Enhance skills and balance.</p>
-        </div>
-        <div>
-            <h4>Advanced Package</h4>
-            <p>$75.0 <span>Per Month</span></p>
-            <p>Advanced package for enthusiasts.</p>
-            <p>Unlimited monthly class access.</p>
-            <p>Master Contrology techniques.</p>
-        </div>
+            <div>
+                <h4>Beginner Package</h4>
+                <p>$24.5 <span>Per Month</span></p>
+                <p>Affordable pricing for beginners</p>
+                <p>Four classes per month.</p>
+                <p>Build strength and flexibility.</p>
+            </div>
+            <div class="pricing-item">
+                <h4>Intermediate Package</h4>
+                <p>$50.5 <span>Per Month</span></p>
+                <p>Great value for intermediates</p>
+                <p>Eight classes per month.</p>
+                <p>Enhance skills and balance.</p>
+            </div>
+            <div>
+                <h4>Advanced Package</h4>
+                <p>$75.0 <span>Per Month</span></p>
+                <p>Advanced package for enthusiasts.</p>
+                <p>Unlimited monthly class access.</p>
+                <p>Master Contrology techniques.</p>
+            </div>
         </div>
     </section>
     <section>
