--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="service-image">
                     <img src="assets/images/group session.jpeg" alt="Group Sessions Image">
                 </div>
-                <div>
+                <div class="service-item">
                     <h3>Group Sessions</h3>
                     <p>Engage in dynamic group classes that promote community, support, and motivation while practicing
                         Contrology techniques to improve core stability and balance.</p>
@@ -82,9 +82,9 @@
         </div>
     </section>
     <!-- pricing  -->
-    <section>
+    <section id="pricing" class="pricing-section">
         <div class="container">
-            <div>
+            <div class="pricing-item">
                 <h4>Beginner Package</h4>
                 <p>$24.5 <span>Per Month</span></p>
                 <p>Affordable pricing for beginners</p>
@@ -98,7 +98,7 @@
                 <p>Eight classes per month.</p>
                 <p>Enhance skills and balance.</p>
             </div>
-            <div>
+            <div class="pricing-item">
                 <h4>Advanced Package</h4>
                 <p>$75.0 <span>Per Month</span></p>
                 <p>Advanced package for enthusiasts.</p>
@@ -109,11 +109,16 @@
     </section>
     <section>
         <section>
-            <div>
+            <div class="pricing-info">
                 <h2> Your Journey</h2>
                 <p>Choose the perfect package. Transform your body today. Join our Contrology community. Experience
                     Pilates benefits now!</p>
                 <h2>Ready to Book Your Class with Us?</h2>
+                <form action="confirmation.html" method="post">
+                    <input type="text" placeholder="Your Name" aria-label="Your Name" required>
+                    <input type="email" placeholder="Email Address" aria-label="Email Address" required>
+                    <button type="submit">Book Your Class </a></button>
+                </form>
             </div>
         </section>
     </section>
