edit the navigation section in the right list form

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
                     <ul>
                         <li>
                             <a href="#home" class="hover">Home</a>
+                        </li>
+                        <li>
                             <a href="#services" class="hover">Services</a>
+                        </li>
+                        <li>
                             <a href="#pricing" class="hover">Pricing</a>
+                        </li>
+                        <li>
                             <a href="#about" class="hover">About</a>
                         </li>
                     </ul>
@@ -123,10 +129,10 @@
         </section>
     </section>
     <!-- testimonial section  -->
-    <section>
-        <div>
+    <section id="about" class="about-section">
+        <div class="containers">
             <h2>What Our Clients Say</h2>
-            <div>
+            <div class="testimonial">
                 <p>"I love the sense of community, family outside blood" - <strong>Aida Luna</strong></p>
                 <p>"Yoga has completely transformed my life, getting more than ever" - <strong>Ella Milton</strong></p>
                 <p>"Attending classes regularly has become a great part of my life" - <strong>Mia Oskert</strong></p>
@@ -135,7 +141,7 @@
     </section>
     <!-- footer  -->
     <footer>
-        <div>
+        <div class="containers">
             <p>&copy; 2024 Contrology. All rights reserved.</p>
         </div>
     </footer>
