--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="service-item">
                 <div class="service-image">
-                    <img src="assets/images/group session.jpeg" alt="Group Sessions Image">
+                    <img src="assets/images/group.jpeg" alt="Group Sessions Image">
                 </div>
                 <div class="service-item">
                     <h3>Group Sessions</h3>
