update the css and correct the images to be in the right postions

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 </nav>
             </div>
         </header>
-    </div>
     <!-- hero section  -->
     <section class="hero" id="home">
         <div class="home-content">
@@ -48,6 +47,7 @@
                     humans.</p>
             </div>
     </section>
+    </div>
     <!-- our offers -->
     <section id="services" class="services-section">
         <div class="container">
@@ -65,15 +65,15 @@
             </div>
 
             <div class="service-item">
-                <div class="service-image">
-                    <img src="assets/images/group.jpeg" alt="Group Sessions Image">
-                </div>
-                <div class="service-item">
+                <div class="service-text">
                     <h3>Group Sessions</h3>
                     <p>Engage in dynamic group classes that promote community, support, and motivation while practicing
                         Contrology techniques to improve core stability and balance.</p>
                 </div>
-            </div>
+                <div class="service-image">
+                    <img src="assets/images/group.jpeg" alt="Group Sessions Image">
+                </div>
+             </div>
 
             <div class="service-item">
                 <div class="service-text">
@@ -143,10 +143,14 @@
     <footer>
         <div class="containers">
             <p>&copy; 2024 Contrology. All rights reserved.</p>
+            <div class="social-links"></div>
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebookccccc"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
